logs/mrsd_ros_tutorials/build.make.211.log.stderr
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp: In function ‘int error(pcl::PointCloud<pcl::PointXYZ>::Ptr&)’:
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp:104:25: error: ‘Cloud_cad’ was not declared in this scope
   kdtree.setInputCloud (Cloud_cad);
                         ^
make[2]: *** [CMakeFiles/perception_data.dir/src/perception_data.cpp.o] Error 1
make[1]: *** [CMakeFiles/perception_data.dir/all] Error 2
make: *** [all] Error 2
